--- a/readme
+++ b/readme
@@ -1,4 +1,3 @@
 This application is not complete.
 
-This is a emulation of a cabinet estimation tool and an ordering site that is supposed to use the information from the cabinet
-tool to order the cabinets.
+This is a tool for ordering products.
